# api/docs/swagger.yaml
@@ -76,14 +76,14 @@ definitions:
     - description
     - post_id
     type: object
-  models.CreateLikeRequest:
+  models.CreateOrUpdateLikeRequest:
     properties:
       post_id:
         type: integer
       status:
         type: boolean
-      user_id:
-        type: integer
+    required:
+    - post_id
     type: object
   models.CreatePostRequest:
     properties:
@@ -878,26 +878,32 @@ paths:
     post:
       consumes:
       - application/json
-      description: Create like
+      description: Create or update like
       parameters:
       - description: Like
         in: body
         name: like
         required: true
         schema:
-          $ref: '#/definitions/models.CreateLikeRequest'
+          $ref: '#/definitions/models.CreateOrUpdateLikeRequest'
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/models.Like'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-      summary: Create like
+      security:
+      - ApiKeyAuth: []
+      summary: Create or update like
       tags:
       - like
   /likes/user-post:
@@ -918,10 +924,16 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Like'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get like by user and post
       tags:
       - like
